compiler/tests/should-fail/TooManyArguments3.via
/* IncorrectNumberOfArgumentsError */

fun main(a: int{a}) { }

host a
